apps/base/transmission/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app.kubernetes.io/name: transmission
        app: transmission
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
        - env:
            - name: PGID
              value: "100"
            - name: PUID
              value: "1000"
            - name: TZ
              value: America/New_York
          image: lscr.io/linuxserver/transmission
          name: transmission
          ports:
            - containerPort: 9091
              name: web
            - containerPort: 51413
              name: torrent-tcp
            - containerPort: 51413
              name: torrent-udp
              protocol: UDP
          resources: {}
          volumeMounts:
            - mountPath: /downloads
              name: cephfs-media
            - mountPath: /config
              name: cephfs-media
              subPath: app/transmission
          securityContext:
            runAsUser: 0
      restartPolicy: Always
      volumes:
        - name: cephfs-media
          nfs:
            server: 10.10.0.111
            path: /media
