apps/base/transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
spec:
  ports:
  - name: web
    port: 9091
    protocol: TCP
    targetPort: 9091
  selector:
    app.kubernetes.io/name: transmission
  type: LoadBalancer
